tests/invalid/ListAssign_Invalid_1.whiley
function f(int[] ls) -> int[]:
    return ls

method main():
    int[] xs = [1, 2]
    xs[0] = true
    f(xs)
